wallet/kustomize/wallet/overlays/local/wallet/server/ingress.yml
#
# Copyright SecureKey Technologies Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallet-server
  labels:
    app: server
    group: wallet
    component: wallet-server
spec:
  tls:
  - hosts:
      - $(SERVER_SERVICE_NAME).||DOMAIN||
    secretName: $(INGRESS_TLS_SECRET)
  rules:
  - host: $(SERVER_SERVICE_NAME).||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wallet-support
            port:
              name: http
